--- a/style.css
+++ b/style.css
@@ -55,7 +55,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /** CSS RESET END **/
-
+html {
+  overflow: hidden;
+}
 body {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     min-height: 100vh;
