--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ body {
     font-size: 1.2rem;
     border-radius: 50%;
     min-width: auto;
-    width: auto;
+    width: 46.2px;
 }
 
 /* Modal Styles */
