--- a/style.css
+++ b/style.css
@@ -265,8 +265,8 @@ body:not(.dark) .nextjs-theme-btn#light-theme svg {
 body:not(.dark) .nextjs-theme-btn#dark-theme svg {
     fill: #222;
 }
-body:not(.dark) .nextjs-theme-btn#info-btn svg {
-    fill: #222;
+.nextjs-theme-btn#info-btn svg {
+    fill: #0000ff;
 }
 .nextjs-footer {
     margin-top: 0.5rem;
