--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ body:not(.dark) .nextjs-theme-btn#dark-theme svg {
     fill: #222;
 }
 .nextjs-theme-btn#info-btn svg {
-    fill: #0000ff;
+    fill: url(#MyGradient);
 }
 .nextjs-footer {
     margin-top: 0.5rem;
